# folio

./: .gitignore  Cargo.toml  README.md
crates/folio/: Cargo.toml
crates/folio-annot/: Cargo.toml
crates/folio-annot/src/: annot.rs  border.rs  types.rs
crates/folio-content/: Cargo.toml
crates/folio-content/src/: gstate.rs  lib.rs  ops.rs  parser.rs
crates/folio-core/: Cargo.toml
crates/folio-core/src/: color.rs  lib.rs  matrix.rs  rect.rs
crates/folio-cos/: Cargo.toml
crates/folio-cos/src/: document.rs  object.rs  parser.rs  serialize.rs  tokenizer.rs  xref.rs
crates/folio-doc/: Cargo.toml
crates/folio-doc/src/: info.rs  page.rs  pdfdoc.rs
crates/folio-filters/: Cargo.toml
crates/folio-filters/src/: ascii85.rs  asciihex.rs  flate.rs  lib.rs  lzw.rs  predictor.rs  runlength.rs
crates/folio-font/: Cargo.toml
crates/folio-font/src/: cmap.rs  encoding.rs  font.rs
crates/folio-forms/: Cargo.toml
crates/folio-forms/src/: field.rs  form.rs
crates/folio-image/: Cargo.toml
crates/folio-image/src/: embed.rs  extract.rs  lib.rs  page_images.rs  xobject.rs
crates/folio-nav/: Cargo.toml
crates/folio-nav/src/: action.rs  bookmark.rs  destination.rs
crates/folio-pdf/: Cargo.toml
crates/folio-pdf/src/: lib.rs
crates/folio-pdf/src/annot/: annot.rs  border.rs  mod.rs  types.rs
crates/folio-pdf/src/content/: gstate.rs  ops.rs  parser.rs
crates/folio-pdf/src/core/: date.rs  error.rs  matrix.rs  point.rs
crates/folio-pdf/src/cos/: document.rs  mod.rs  parser.rs  serialize.rs  tokenizer.rs  xref.rs
crates/folio-pdf/src/doc/: info.rs  mod.rs  page.rs  pdfdoc.rs
crates/folio-pdf/src/filters/: ascii85.rs  asciihex.rs  flate.rs  lzw.rs  mod.rs  predictor.rs  runlength.rs
crates/folio-pdf/src/font/: cmap.rs  encoding.rs  font.rs  metrics.rs  mod.rs
crates/folio-pdf/src/forms/: field.rs  form.rs  mod.rs
crates/folio-pdf/src/image/: embed.rs  extract.rs  mod.rs  page_images.rs  xobject.rs
crates/folio-pdf/src/nav/: action.rs  bookmark.rs  destination.rs  mod.rs
crates/folio-pdf/src/text/: extractor.rs  search.rs
crates/folio-text/: Cargo.toml
crates/folio-text/src/: extractor.rs  lib.rs  search.rs
crates/folio-uniffi/: Cargo.toml  build.rs
crates/folio-uniffi/src/: folio.udl  lib.rs
crates/folio/examples/: create_pdf.rs  embed_image.rs  extract_text.rs  inspect.rs  list_annotations.rs  list_bookmarks.rs  list_forms.rs  search.rs
crates/folio/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
