[workspace]
resolver = "2"
members = [
    "crates/folio-pdf",
    "crates/folio-oracle",
    "crates/folio-uniffi",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickvision/folio"

[workspace.dependencies]
folio-pdf = { path = "crates/folio-pdf", version = "0.0.1" }
thiserror = "2"
flate2 = "1"
memmap2 = "0.9"
indexmap = "2"
log = "0.4"
encoding_rs = "0.8"
image = "0.25"
bitflags = "2"
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }
