[package]
name = "folio-content"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF content stream parsing and graphics state for the folio PDF library"

[dependencies]
folio-core.workspace = true
folio-cos.workspace = true
folio-filters.workspace = true
log.workspace = true
