[package]
name = "folio-cos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "COS (Carousel Object System) parser and serializer for the folio PDF library"

[dependencies]
folio-core.workspace = true
folio-filters.workspace = true
indexmap.workspace = true
log.workspace = true
