[package]
name = "folio-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF stream filter encoding and decoding for the folio PDF library"

[dependencies]
folio-core.workspace = true
flate2.workspace = true
memmap2.workspace = true
