[package]
name = "folio-font"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF font handling, encoding, and metrics for the folio PDF library"

[dependencies]
folio-core.workspace = true
folio-cos.workspace = true
encoding_rs.workspace = true
log.workspace = true
