[package]
name = "folio-forms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF interactive form field handling for the folio PDF library"

[dependencies]
folio-core.workspace = true
folio-cos.workspace = true
bitflags.workspace = true
indexmap.workspace = true
log.workspace = true
