[package]
name = "folio-nav"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF bookmarks, destinations, and navigation for the folio PDF library"

[dependencies]
folio-core.workspace = true
folio-cos.workspace = true
indexmap.workspace = true
log.workspace = true
