[package]
name = "folio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A comprehensive PDF library for Rust"
keywords = ["pdf", "document", "parser", "text-extraction"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
folio-core.workspace = true
folio-filters.workspace = true
folio-cos.workspace = true
folio-doc.workspace = true
folio-content.workspace = true
folio-font.workspace = true
folio-text.workspace = true
folio-image.workspace = true
folio-annot.workspace = true
folio-forms.workspace = true
folio-nav.workspace = true
indexmap.workspace = true
